Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38665

mariadb-binlog --read-from-remote-server | mariadb fails

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 12.3
    • 12.3.1
    • Replication
    • None
    • Not for Release Notes
    • Q1/2026 Server Maintenance

    Description

      MDEV-32570

      deepthi@Deepthi-Ubuntu:/test/MDEV-32570-MD250126-mariadb-12.3.0-linux-x86_64-dbg$ ./bin/mariadb-binlog -S/test/MDEV-32570-MD250126-mariadb-12.3.0-linux-x86_64-dbg/mariadb-test/var/tmp/mysqld.1.sock  --read-from-remote-server master-bin.000001 -uroot | ./cl
      --------------
      BINLOG '
      Wyt3aawBAAAAjgEAALBUAAAAAAsAAAALAAAAAEFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQR5BDoo=
      Wyt3aawBAAAAjgEAALBUAAAAAAsAAAALAAAAAEFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFB
      QUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQR5BDoo=
      '
      --------------
       
      ERROR 1105 (HY000) at line 474: Unknown error
      
      

      Enable binary log encryption
      Generate partial_log_events.
      Apply binary log using --read-from-remote-server

      Error log on server shows

      2026-01-26 15:46:45 9 [ERROR]  BINLOG_BASE64_EVENT: Broken Partial_rows_log_event stream. Found 5 / 5, expected Partial_rows_log_event 1 / 5, Internal MariaDB error code: 4253
      

      Attachments

        Issue Links

          Activity

            People

              bnestere Brandon Nesterenko
              Deepthi ES Deepthi Eranti Sreenivas
              Brandon Nesterenko Brandon Nesterenko
              Deepthi Eranti Sreenivas Deepthi Eranti Sreenivas
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.