MDEV-38665: mariadb-binlog --read-from-remote-server | mariadb fails

Piping Partial_rows_log_events read from mariadb-binlog
--read-from-remote-server to a mariadb client fails. This is because
the temp_buf for Log_events read by mariadb-binlog is the network
buffer by default, and is shared by all events (and cleared after
each event is processed). In particular, the Table_map event is
needed after it is processed by Partial_rows_log_events to re-print for
the last event in the group. However, its content was cleared after
being initially processed, and the effect is that the last
Partial_rows_log_event was just printed twice.

This is fixed by having Table_map events manage their own memory
buffer when reading from a remote server. This pattern is already
established by annotate events, and the function is re-used and
re-named to be general.